fixed card width on mobile

--- a/src/app/3dtech/ar-vr-mr/ar-vr-mr.module.css
+++ b/src/app/3dtech/ar-vr-mr/ar-vr-mr.module.css
@@ -791,7 +791,7 @@
   }
 
   .card {
-    width: 400px;
+    width: 95%;
     height: 200px;
     margin-left: 0;
     margin-top: 20px;
